--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
+    "eleventy-plugin-svg-sprite": "^1.2.1",
     "clean-css": "^5.1.5",
     "cross-env": "^7.0.3",
     "html-minifier": "^4.0.0",
