--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "dependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
-    "eleventy-plugin-svg-sprite": "^1.2.1",
     "clean-css": "^5.1.5",
     "cross-env": "^7.0.3",
+    "eleventy-plugin-svg-sprite": "^1.2.1",
     "html-minifier": "^4.0.0",
     "luxon": "^1.28.0",
     "node-sass": "^6.0.1"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "get-google-fonts": "^1.2.2"
   }
 }
