--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
   "name": "eleventonia",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A mildly opinionated Eleventy starter kit",
   "scripts": {
-    "eleventy:dev": "cross-env ELEVENTY_ENV=development npx @11ty/eleventy --serve",
-    "eleventy:prod": "cross-env ELEVENTY_ENV=production npx @11ty/eleventy --serve"
+    "eleventy:serve": "eleventy --serve --quiet",
+    "eleventy:build": "eleventy",
+    "sass:watch": "sass src/assets/styles/scss:src/includes/styles --watch --color",
+    "sass:build": "sass src/assets/styles:src/assets/styles --no-source-map --style=compressed",
+    "dev": "run-p -l sass:build sass:watch eleventy:serve",
+    "build": "run-s -l eleventy:build sass:build"
   },
-  "author": "Matt DeCamp",
+  "author": {
+    "name": "Matt DeCamp",
+    "email": "matt@mattdecamp.com",
+    "url": "https://mattdecamp.com"
+  },
   "license": "MIT",
   "dependencies": {
-    "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy": "^2.0.0",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
     "clean-css": "^5.1.5",
     "cross-env": "^7.0.3",
-    "eleventy-plugin-svg-sprite": "^1.2.1",
+    "eleventy-plugin-svg-sprite": "^2.4.0",
     "html-minifier": "^4.0.0",
-    "luxon": "^1.28.0",
-    "node-sass": "^6.0.1"
+    "luxon": "^3.3.0",
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.62.1"
   }
 }
