--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "2.0.0",
   "description": "A mildly opinionated Eleventy starter kit",
   "scripts": {
-    "eleventy:serve": "eleventy --serve --quiet",
-    "eleventy:build": "eleventy",
+    "eleventy:serve": "cross-env ELEVENTY_ENV=development eleventy --serve --quiet",
+    "eleventy:build": "cross-env ELEVENTY_ENV=production eleventy",
+    "sass:test": "sass src/includes/styles/scss:src/includes/styles",
     "sass:watch": "sass src/assets/styles/scss:src/includes/styles --watch --color",
-    "sass:build": "sass src/assets/styles:src/assets/styles --no-source-map --style=compressed",
+    "sass:build": "sass src/assets/styles/scss:src/assets/styles --no-source-map --style=compressed",
     "dev": "run-p -l sass:build sass:watch eleventy:serve",
-    "build": "run-s -l eleventy:build sass:build"
+    "build": "eleventy:build"
   },
   "author": {
     "name": "Matt DeCamp",
